k8/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-web
  template:
    metadata:
      labels:
        app: go-web
    spec:
      containers:
      - name: go-web
        image: nginx
        ports:
        - containerPort: 8081
