k8/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-service
spec:
  selector:
    app: go-web-app
  ports:
  - port: 80
    targetPort: 8080
