k8/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "karanlakhadive.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-app-service
            port:
              number: 80
